--- a/teleport-tsh.nuspec
+++ b/teleport-tsh.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>teleport-tsh</id>
     <version>7.1.2</version>
-    <packageSourceUrl>Where is this Chocolatey package located (think GitHub)? packageSourceUrl is highly recommended for the community feed</packageSourceUrl>
+    <packageSourceUrl>https://github.com/ndgit/chocolatey-teleport-tsh</packageSourceUrl>
     <title>teleport-tsh (Install)</title>
     <authors>Robert Rettig</authors>
     <projectUrl>https://goteleport.com/teleport</projectUrl>
