--- a/teleport-tsh.nuspec
+++ b/teleport-tsh.nuspec
@@ -4,10 +4,11 @@
     <id>teleport-tsh</id>
     <version>7.1.2</version>
     <packageSourceUrl>https://github.com/ndgit/chocolatey-teleport-tsh</packageSourceUrl>
+    <owners>flybyray</owners>
     <title>teleport-tsh (Install)</title>
     <authors>Robert Rettig</authors>
     <projectUrl>https://goteleport.com/teleport</projectUrl>
-    <iconUrl>https://goteleport.com/favicon.ico</iconUrl>
+    <iconUrl>https://cdn.statically.io/gh/ndgit/chocolatey-teleport-tsh/cc896c07/logo.png</iconUrl>
     <copyright>2021 Gravitational Inc.; all rights reserved.</copyright>
     <licenseUrl>https://github.com/gravitational/teleport/tree/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
